--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ retrievers
 outputs
 wandb
 pretrained_configs
+lightning_logs
 
 # Created by https://www.toptal.com/developers/gitignore/api/jetbrains+all,vscode,python,jupyternotebooks,linux,windows,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=jetbrains+all,vscode,python,jupyternotebooks,linux,windows,macos
