--- a/relik/reader/conf/config.yaml
+++ b/relik/reader/conf/config.yaml
@@ -3,9 +3,9 @@ hydra:
   run:
     dir: ./experiments/${model_name}/${now:%Y-%m-%d}/${now:%H-%M-%S}
 
-model_name: relik-reader-deberta-base-retriever-relik-entity-linking-aida-wikipedia-base  # used to name the model in wandb and output dir
+model_name: relik-reader-deberta-base-retriever-relik-entity-linking-aida-wikipedia-twin-no-pere  # -start-end-mask-0.001  # used to name the model in wandb and output dir
 project_name: relik-reader # used to name the project in wandb
-
+offline: false  # if true, wandb will not be used
 
 defaults:
   - _self_
