Add configuration files and update training script

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,13 @@
 
 data/*
 experiments/*
+models/*
 retrievers
 outputs
 wandb
 pretrained_configs
 lightning_logs
+hf_weights
 
 # Created by https://www.toptal.com/developers/gitignore/api/jetbrains+all,vscode,python,jupyternotebooks,linux,windows,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=jetbrains+all,vscode,python,jupyternotebooks,linux,windows,macos
