--- a/relik/reader/conf/small.yaml
+++ b/relik/reader/conf/small.yaml
@@ -3,12 +3,12 @@ hydra:
   run:
     dir: ./experiments/${model_name}/${now:%Y-%m-%d}/${now:%H-%M-%S}
 
-model_name: relik-reader-base-19042024  # -start-end-mask-0.001  # used to name the model in wandb and output dir
+model_name: relik-reader-deberta-small-retriever-relik-entity-linking-aida-wikipedia  # -start-end-mask-0.001  # used to name the model in wandb and output dir
 project_name: relik-reader # used to name the project in wandb
 offline: false  # if true, wandb will not be used
 
 defaults:
   - _self_
   - training: base
-  - model: base
+  - model: small
   - data: base
