chore: Update configuration files and training script

--- a/relik/reader/conf/base.yaml
+++ b/relik/reader/conf/base.yaml
@@ -1,9 +1,11 @@
 # Required to make the "experiments" dir the default one for the output of the models
 hydra:
+  job:
+    chdir: True
   run:
     dir: ./experiments/${model_name}/${now:%Y-%m-%d}/${now:%H-%M-%S}
 
-model_name: relik-reader-deberta-base-30052024-lrd09-8x2048-onelayer  # -start-end-mask-0.001  # used to name the model in wandb and output dir
+model_name: relik-reader-deberta-base-04062024-lrd08-1x4096-seed42  # -start-end-mask-0.001  # used to name the model in wandb and output dir
 project_name: relik-reader # used to name the project in wandb
 offline: false  # if true, wandb will not be used
 
