--- a/relik/retriever/conf/logging/wandb_logging.yaml
+++ b/relik/retriever/conf/logging/wandb_logging.yaml
@@ -3,7 +3,7 @@
 log: True # set to False to avoid the logging
 
 wandb_arg:
-  _target_: lightning.loggers.WandbLogger
+  _target_: lightning.pytorch.loggers.WandbLogger
   name: ${model_name}
   project: ${project_name}
   save_dir: ./
