--- a/relik/retriever/conf/loss/nce_loss.yaml
+++ b/relik/retriever/conf/loss/nce_loss.yaml
@@ -1,1 +1,1 @@
-_target_: relik.retriever.pythorch_modules.losses.MultiLabelNCELoss
+_target_: relik.retriever.pytorch_modules.loss.MultiLabelNCELoss
