--- a/dockerfiles/fastapi/Dockerfile.cuda
+++ b/dockerfiles/fastapi/Dockerfile.cuda
@@ -20,4 +20,4 @@ RUN pip install --upgrade --no-cache-dir .[serve] \
 
 EXPOSE 8000
 
-ENTRYPOINT ["scripts/docker/start-gunic.sh"]
+ENTRYPOINT ["relik serve"]
