chore: Update Dockerfile entrypoint to use start-gunic.sh script

--- a/dockerfiles/fastapi/Dockerfile.cpu
+++ b/dockerfiles/fastapi/Dockerfile.cpu
@@ -15,4 +15,4 @@ RUN pip install --upgrade --no-cache-dir .[serve] -c constraints.cpu.txt \
 
 EXPOSE 8000
 
-ENTRYPOINT ["relik serve"]
+ENTRYPOINT ["scripts/docker/start-gunic.sh"]
