--- a/dockerfiles/fastapi/Dockerfile.cuda
+++ b/dockerfiles/fastapi/Dockerfile.cuda
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:12.0.0-base-ubuntu22.04
+FROM nvidia/cuda:12.1.0-base-ubuntu22.04
 
 ARG DEBIAN_FRONTEND=noninteractive
 
@@ -18,6 +18,7 @@ WORKDIR /home/relik-user/relik
 RUN pip install --upgrade --no-cache-dir .[serve] \
     && chmod +x scripts/docker/start-gunic.sh
 
-EXPOSE 8000
 
-ENTRYPOINT ["relik serve"]
+EXPOSE 8000 8001
+
+ENTRYPOINT ["scripts/docker/start-gunic.sh"]
